Redesign app to showcase Matrix TSL products - Add product list screen with three Matrix TSL products - Add webview screen for displaying product websites - Update app name and package to Matrix TSL - Remove old habit/goal tracking features - Update dependencies to use webview_flutter

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -23,7 +23,7 @@ if (flutterVersionName == null) {
 }
 
 android {
-    namespace "com.viceapp.vice_app"
+    namespace "com.matrixtsl.matrix_app"
     compileSdk 36
     ndkVersion flutter.ndkVersion
 
@@ -41,7 +41,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.viceapp.vice_app"
+        applicationId "com.matrixtsl.matrix_app"
         minSdkVersion flutter.minSdkVersion
         targetSdkVersion 36
         versionCode flutterVersionCode.toInteger()
