--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: vice_app
-description: A fasting reward tracker app for Android
+name: matrix_app
+description: Matrix TSL Product Showcase App
 publish_to: 'none'
 version: 1.0.0+1
 
@@ -10,13 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.6
-  shared_preferences: ^2.2.2
-  provider: ^6.1.1
-  intl: ^0.19.0
-  uuid: ^4.3.3
-  image_picker: ^1.0.7
-  path_provider: ^2.1.1
-  path: ^1.8.3
+  webview_flutter: ^4.4.2
 
 dev_dependencies:
   flutter_test:
