--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,9 @@ dependencies:
   cupertino_icons: ^1.0.6
   webview_flutter: ^4.4.2
   youtube_player_iframe: ^4.0.4
+  url_launcher: ^6.2.5
+  timezone: ^0.9.2
+  flutter_svg: ^2.0.9
 
 dev_dependencies:
   flutter_test:
