Update app bars: logo on top, title text below - Fix video asset path - Update all screens with new layout

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,4 +28,5 @@ flutter:
   
   assets:
     - assets/
+    - assets/Industrial Maintenance - IM0004 Maintenance of closed loop systems Overview.mp4
 
